--- a/hw12_alt/index.html
+++ b/hw12_alt/index.html
@@ -48,7 +48,7 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script id="newTaskTemplate" type="text/taskTemplate">
-      <li class="collection-item" data-task-id={{id}}>{{value}}
+      <li class="collection-item {{checkClass}}" data-task-id={{id}}>{{value}}
         <a class="remove-item secondary-content"><i class="fa fa-remove" aria-hidden="true"></i></a>
       </li>
     </script>
