--- a/hw17/index.html
+++ b/hw17/index.html
@@ -20,6 +20,7 @@
       <div id="my_modal" class="modal">
         <div class="modal_content">
           <img alt="" src="{{url}}">
+          <span class="close_modal_window">×</span>
         </div>
       </div>
     </script>
