--- a/hw18/index.html
+++ b/hw18/index.html
@@ -43,6 +43,10 @@
             <form id="addContactForm">
               <div class="card-content">
                 <div class="row">
+                  <div class="input-field col-3" hidden>
+                    <input type="text" id="ContactId" aria="hidden" />
+                    <label for="ContactId"></label>
+                  </div>
                   <div class="input-field col-3">
                     <input type="text" id="name" />
                     <label for="name">Name</label>
