--- a/hw20_alt/index.html
+++ b/hw20_alt/index.html
@@ -46,7 +46,7 @@
         defer
       ></script>
       <script type="text/template" id="photoTemplate">
-        <a data-src="{{url}}" data-fancybox="gallery" class="fancybox">
+        <a data-fancybox="gallery" href="{{url}}" class="fancybox">
             <img src="{{thumbnailUrl}}" alt="" title="{{title}}" class="rounded" id="{{id}}">
         </a>
       </script>
